reference/A.Sang-K15/gen/MCParser.java
// Generated from /Users/dominhthang/Thang/HK-191/Principles-Of-Programming-Languages/Assignment/reference/A.Sang-K15/MC.g4 by ANTLR 4.7.2

	package mc.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLLIT=1, BOOLTYPE=2, BREAK=3, CONTINUE=4, ELSE=5, FOR=6, IF=7, RETURN=8, 
		DO=9, WHILE=10, TRUE=11, FALSE=12, STRINGTYPE=13, FLOATTYPE=14, INTTYPE=15, 
		VOIDTYPE=16, ID=17, INTLIT=18, FLOATLIT=19, FRAC=20, EXP=21, ILLEGAL_ESCAPE=22, 
		STRINGLIT=23, LB=24, RB=25, LP=26, RP=27, LSB=28, RSB=29, SEMI=30, COMMA=31, 
		WS=32, ADDOP=33, SUBOP=34, MULOP=35, DIVOP=36, MODOP=37, NOTOP=38, OROP=39, 
		ANDOP=40, NOTEQUALOP=41, EQUALOP=42, LESSOP=43, GREATEROP=44, LEOREQUOP=45, 
		GROREQUOP=46, ASSIGNOP=47, BLOCKCOM=48, LINECOM=49, UNCLOSE_STRING=50, 
		ERROR_CHAR=51;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_vardecla = 2, RULE_idlist = 3, 
		RULE_id = 4, RULE_idalone = 5, RULE_idarray = 6, RULE_funcdecla = 7, RULE_arraypointertype = 8, 
		RULE_paralist_decla = 9, RULE_paradecla = 10, RULE_block = 11, RULE_statementpart = 12, 
		RULE_statement = 13, RULE_ifstmt = 14, RULE_dowhilestmt = 15, RULE_forstmt = 16, 
		RULE_breakstmt = 17, RULE_continuestmt = 18, RULE_returnstmt = 19, RULE_funccall = 20, 
		RULE_paralist_call = 21, RULE_para_call = 22, RULE_expressionstmt = 23, 
		RULE_expression = 24, RULE_exp1 = 25, RULE_exp2 = 26, RULE_exp3 = 27, 
		RULE_exp4 = 28, RULE_exp5 = 29, RULE_exp6 = 30, RULE_exp7 = 31, RULE_exp8 = 32, 
		RULE_exp9 = 33, RULE_exp10 = 34, RULE_operand = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "vardecla", "idlist", "id", "idalone", "idarray", 
			"funcdecla", "arraypointertype", "paralist_decla", "paradecla", "block", 
			"statementpart", "statement", "ifstmt", "dowhilestmt", "forstmt", "breakstmt", 
			"continuestmt", "returnstmt", "funccall", "paralist_call", "para_call", 
			"expressionstmt", "expression", "exp1", "exp2", "exp3", "exp4", "exp5", 
			"exp6", "exp7", "exp8", "exp9", "exp10", "operand"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'boolean'", "'break'", "'continue'", "'else'", "'for'", 
			"'if'", "'return'", "'do'", "'while'", "'true'", "'false'", "'string'", 
			"'float'", "'int'", "'void'", null, null, null, null, null, null, null, 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", null, "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", "'!='", "'=='", "'<'", 
			"'>'", "'<='", "'>='", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOLLIT", "BOOLTYPE", "BREAK", "CONTINUE", "ELSE", "FOR", "IF", 
			"RETURN", "DO", "WHILE", "TRUE", "FALSE", "STRINGTYPE", "FLOATTYPE", 
			"INTTYPE", "VOIDTYPE", "ID", "INTLIT", "FLOATLIT", "FRAC", "EXP", "ILLEGAL_ESCAPE", 
			"STRINGLIT", "LB", "RB", "LP", "RP", "LSB", "RSB", "SEMI", "COMMA", "WS", 
			"ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", "NOTOP", "OROP", "ANDOP", 
			"NOTEQUALOP", "EQUALOP", "LESSOP", "GREATEROP", "LEOREQUOP", "GROREQUOP", 
			"ASSIGNOP", "BLOCKCOM", "LINECOM", "UNCLOSE_STRING", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				declaration();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << STRINGTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE) | (1L << VOIDTYPE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public VardeclaContext vardecla() {
			return getRuleContext(VardeclaContext.class,0);
		}
		public FuncdeclaContext funcdecla() {
			return getRuleContext(FuncdeclaContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				vardecla();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				funcdecla();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclaContext extends ParserRuleContext {
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MCParser.SEMI, 0); }
		public TerminalNode BOOLTYPE() { return getToken(MCParser.BOOLTYPE, 0); }
		public TerminalNode FLOATTYPE() { return getToken(MCParser.FLOATTYPE, 0); }
		public TerminalNode INTTYPE() { return getToken(MCParser.INTTYPE, 0); }
		public TerminalNode STRINGTYPE() { return getToken(MCParser.STRINGTYPE, 0); }
		public VardeclaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterVardecla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitVardecla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitVardecla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclaContext vardecla() throws RecognitionException {
		VardeclaContext _localctx = new VardeclaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vardecla);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << STRINGTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(82);
			idlist();
			setState(83);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdlistContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(MCParser.COMMA, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public IdlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterIdlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitIdlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitIdlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdlistContext idlist() throws RecognitionException {
		IdlistContext _localctx = new IdlistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_idlist);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				id();
				setState(86);
				match(COMMA);
				setState(87);
				idlist();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				id();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public IdaloneContext idalone() {
			return getRuleContext(IdaloneContext.class,0);
		}
		public IdarrayContext idarray() {
			return getRuleContext(IdarrayContext.class,0);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_id);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				idalone();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				idarray();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdaloneContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public IdaloneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idalone; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterIdalone(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitIdalone(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitIdalone(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdaloneContext idalone() throws RecognitionException {
		IdaloneContext _localctx = new IdaloneContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_idalone);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdarrayContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LSB() { return getToken(MCParser.LSB, 0); }
		public TerminalNode INTLIT() { return getToken(MCParser.INTLIT, 0); }
		public TerminalNode RSB() { return getToken(MCParser.RSB, 0); }
		public IdarrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idarray; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterIdarray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitIdarray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitIdarray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdarrayContext idarray() throws RecognitionException {
		IdarrayContext _localctx = new IdarrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_idarray);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(ID);
			setState(99);
			match(LSB);
			setState(100);
			match(INTLIT);
			setState(101);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdeclaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LB() { return getToken(MCParser.LB, 0); }
		public TerminalNode RB() { return getToken(MCParser.RB, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode BOOLTYPE() { return getToken(MCParser.BOOLTYPE, 0); }
		public TerminalNode FLOATTYPE() { return getToken(MCParser.FLOATTYPE, 0); }
		public TerminalNode INTTYPE() { return getToken(MCParser.INTTYPE, 0); }
		public TerminalNode STRINGTYPE() { return getToken(MCParser.STRINGTYPE, 0); }
		public TerminalNode VOIDTYPE() { return getToken(MCParser.VOIDTYPE, 0); }
		public ArraypointertypeContext arraypointertype() {
			return getRuleContext(ArraypointertypeContext.class,0);
		}
		public Paralist_declaContext paralist_decla() {
			return getRuleContext(Paralist_declaContext.class,0);
		}
		public FuncdeclaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdecla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterFuncdecla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitFuncdecla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitFuncdecla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdeclaContext funcdecla() throws RecognitionException {
		FuncdeclaContext _localctx = new FuncdeclaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcdecla);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(103);
				match(BOOLTYPE);
				}
				break;
			case 2:
				{
				setState(104);
				match(FLOATTYPE);
				}
				break;
			case 3:
				{
				setState(105);
				match(INTTYPE);
				}
				break;
			case 4:
				{
				setState(106);
				match(STRINGTYPE);
				}
				break;
			case 5:
				{
				setState(107);
				match(VOIDTYPE);
				}
				break;
			case 6:
				{
				setState(108);
				arraypointertype();
				}
				break;
			}
			setState(111);
			match(ID);
			setState(112);
			match(LB);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << STRINGTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE))) != 0)) {
				{
				setState(113);
				paralist_decla();
				}
			}

			setState(116);
			match(RB);
			setState(117);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraypointertypeContext extends ParserRuleContext {
		public TerminalNode LSB() { return getToken(MCParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(MCParser.RSB, 0); }
		public TerminalNode BOOLTYPE() { return getToken(MCParser.BOOLTYPE, 0); }
		public TerminalNode FLOATTYPE() { return getToken(MCParser.FLOATTYPE, 0); }
		public TerminalNode INTTYPE() { return getToken(MCParser.INTTYPE, 0); }
		public TerminalNode STRINGTYPE() { return getToken(MCParser.STRINGTYPE, 0); }
		public ArraypointertypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraypointertype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterArraypointertype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitArraypointertype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitArraypointertype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArraypointertypeContext arraypointertype() throws RecognitionException {
		ArraypointertypeContext _localctx = new ArraypointertypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arraypointertype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << STRINGTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(120);
			match(LSB);
			setState(121);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paralist_declaContext extends ParserRuleContext {
		public ParadeclaContext paradecla() {
			return getRuleContext(ParadeclaContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(MCParser.COMMA, 0); }
		public Paralist_declaContext paralist_decla() {
			return getRuleContext(Paralist_declaContext.class,0);
		}
		public Paralist_declaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paralist_decla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterParalist_decla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitParalist_decla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitParalist_decla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Paralist_declaContext paralist_decla() throws RecognitionException {
		Paralist_declaContext _localctx = new Paralist_declaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_paralist_decla);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				paradecla();
				setState(124);
				match(COMMA);
				setState(125);
				paralist_decla();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				paradecla();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParadeclaContext extends ParserRuleContext {
		public TerminalNode BOOLTYPE() { return getToken(MCParser.BOOLTYPE, 0); }
		public TerminalNode FLOATTYPE() { return getToken(MCParser.FLOATTYPE, 0); }
		public TerminalNode INTTYPE() { return getToken(MCParser.INTTYPE, 0); }
		public TerminalNode STRINGTYPE() { return getToken(MCParser.STRINGTYPE, 0); }
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LSB() { return getToken(MCParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(MCParser.RSB, 0); }
		public ParadeclaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paradecla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).enterParadecla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MCListener ) ((MCListener)listener).exitParadecla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitParadecla(this);
			else return visitor.visitChildren(this);
		}
	}
